2007-02-21  Stefan Jahn  <stefan@lkcc.org>

	* environment.cpp: Copy variable content if necessary.

	* check_netlist.cpp: Don't come across root components twice when
	expanding subcircuits.

2007-02-20  Stefan Jahn  <stefan@lkcc.org>

	* variable.h (class variable): Allowing variables to references
	as well.

	* variable.cpp (toString): New function which creates a textual
	representation of a variable.

	* property.cpp: Also allow properties which are references.

	* net.cpp: Start equation solver once before each top-level
	analysis.

	* input.cpp: Ensure that component properties (if variables) are
	referenced from the correct environment.

	* equation.cpp: Some more functionality especially for double
	values/assignments added.

	* environment.cpp: The equation solver now updates equation
	results and updates references across subcircuit boundaries.

	* check_netlist.cpp: Putting subcircuit variables into the
	appropriate environment.

2007-02-03  Stefan Jahn  <stefan@lkcc.org>

	* nasolver.cpp: Fixing probe functionality.

2007-01-30  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Updated copyright notice.

2006-10-16  Stefan Jahn  <stefan@lkcc.org>

	* input.cpp: Removed equation checking here.  It's now done in
	the netlist checker.

	* equation.cpp: New function checking if a given variable name
	is an equation.

	* environment.cpp: Added children funtionality for environments.

	* check_netlist.cpp: Resolving variables in equations.
	Creating a real environment tree.  Checking equtions in all
	subcircuits as well.

2006-10-09  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: Fixed a bug in the transient solver occuring
	when a components MNA matrix changes during DC and TR (e.g.
	transmission line).

2006-09-24  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Added 'MaxStep' as
	valid property in transient analysis.

2006-09-19  Stefan Jahn  <stefan@lkcc.org>

	* check_mdl.cpp: Translating special variable 'PI'.  Defaulting